# pdf_query

./: .gitignore  README.md  mcp_config_example.json  pyproject.toml
examples/: test_server.py  usage_example.py
pdf_query_mcp/: __init__.py  server.py
tests/: test_integration.py  test_tools.py  test_utils.py
